--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "caniuse-lite": "^1.0.30001017",
     "handlebars": "^4.3.0",
     "http-proxy": "^1.18.1",
-    "serialize-javascript": "^5.0.1"
+    "lodash": "^4.17.20",
+    "npm-registry-fetch": "^9.0.0",
+    "serialize-javascript": "^5.0.1",
+    "yargs-parser": "^20.2.4"
   }
 }
